test/classes/deitz/inherit/test_inherit_error3.good
Error: Illegal to inherit from record (test_inherit_error3.chpl:1)
